--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "dependencies": {
     "express": "^4.15.2",
-    "react": "~15.4.1",
-    "react-native": "0.42.3",
+    "react": "16.0.0-alpha.6",
+    "react-native": "^0.43.4",
     "react-native-webrtc": "^1.57.0",
-    "react-navigation": "^1.0.0-beta.7",
-    "socket.io": "^1.7.3"
+    "react-navigation": "^1.0.0-beta.9",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
